feat: ADR-020 — Virtual Threads + JVM/HikariCP redimensionado para 8 vCPU Railway
- spring.threads.virtual.enabled=true em application.properties
- HikariCP: maximum-pool-size 10→20, minimum-idle 2→5 (fórmula vCPU×2+1)
- nixpacks.toml: -Xmx512m→6g, -XX:MaxMetaspaceSize 256m→512m
- ADR-020 criada; spec-virtual-threads marcada como Implementado
- AnalyticsServiceTest: result.get(0) → result.getFirst() (Java 21)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>